--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -1,21 +1,15 @@
 <header class="header">
-	<a href="/admin" class="header__logo">Admin Panel</a>
+	<a href="/" class="header__logo">Admin</a>
 	<nav class="header__nav">
 		<ul>
 			<li>
 				<a href="/">Home</a>
 			</li>
 			<li>
-				<a href="/about">About</a>
+				<a href="/login">Login</a>
 			</li>
 			<li>
-				<a href="/contact">Contact</a>
-			</li>
-			<li>
-				<a href="/contact">Login</a>
-			</li>
-			<li>
-				<a href="/contact">Sign Up</a>
+				<a href="/register">Sign Up</a>
 			</li>
 		</ul>
 	</nav>
