--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,15 @@
 <header class="header">
-	<a href="/" class="header__logo">My-Blog</a>
+	<a href="/" class="header__logo">PenPalette</a>
 	<nav class="header__nav">
 		<ul>
 			<li>
 				<a href="/" class="<%= isActiveRoute('/',currentRoute) %>">Home</a>
 			</li>
 			<li>
-				<a href="/about" class="<%= isActiveRoute('/about',currentRoute) %>">About</a>
+				<a href="/login" class="<%= isActiveRoute('/login',currentRoute) %>">Login</a>
 			</li>
 			<li>
-				<a href="/contact" class="<%= isActiveRoute('/contact',currentRoute) %>">Contact</a>
+				<a href="/user/dashboard" class="<%= isActiveRoute('/user/dashboard',currentRoute) %>">Dashboard</a>
 			</li>
 		</ul>
 	</nav>
