--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,2 +1,20 @@
 <h1><%= data.title %></h1>
 <article class="article"><%= data.body %></article>
+<p class="comments"> Comments </p>
+
+<!-- Form for adding a new comment -->
+<form action="/post/<%= data._id %>/comments" method="POST">
+	<div class="form-group">
+	  <label for="comment">Add your comment:</label>
+	  <textarea id="comment" name="comment" rows="3" class="form-control" required></textarea>
+	</div>
+	<button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+<%- include('./user/comment.ejs',{ level: 0 }) %>
+
+<!-- <form action="/:post_id/comment" method="POST">
+	
+	<label for="username">Username</label>
+	<input type="text" placeholder="Enter comment" name="comment">
+</form> -->
