--- a/views/search.ejs
+++ b/views/search.ejs
@@ -8,6 +8,7 @@
 		  <a href="/post/<%= post._id %>">
 			<span><%= post.title %></span>
 			<span class="article-list__date"><%= post.createdAt.toDateString() %></span>
+			<span class="post_author"><%= post.username %></span>
 		  </a>
 		</li>
 	  <% }) %>
