--- a/views/post.ejs
+++ b/views/post.ejs
@@ -11,7 +11,7 @@
 	<button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
-<%- include('./user/comment.ejs',{ level: 0 }) %>
+<%- include('./user/comment.ejs',{ level: 0 , currUser}) %>
 
 <!-- <form action="/:post_id/comment" method="POST">
 	
