--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,7 +1,7 @@
 <div class="author">
 	<h1 class="author__heading">PenPalette</h1>
 	<p class="author__body">
-		A platform for one to pen down their thoughts and share their ideas with th world.
+		A platform for one to pen down their thoughts and share their ideas with the world.
 	</p>
 </div>
 <!-- <img src="" alt="img" class="post-img" width="980" height="530"> -->
