--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,12 +7,13 @@
 	<meta name="description" content="<%= locals.description %>">
 	<link rel="stylesheet" href="/css/s1.css">
 	<script  type="text/javascript" defer src="/js/script.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
 	<!-- view of search bar -->
 	<%- include('../partials/search.ejs') %>
 	<div class="container">
-		<%- include('../partials/header.ejs') %>
+		<%- include('../partials/header.ejs',{user:locals.user}) %>
 		<main class="main">
 			<%- body %>
 		</main>
