--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -1,8 +1,9 @@
 <div class="admin-title">
-	<h2>Posts</h2>
+	<h2>My Posts</h2>
 	<a href="/add-post" class="button">+ Add New</a>
 </div>
 <ul class="admin-posts">
+	<% if(userPosts){ %>
 	<% userPosts.forEach(post => { %>
 		<li>
 			<a href="/post/<%= post._id %>">
@@ -16,4 +17,5 @@
 			</div>
 		</li>
 	<% }) %>
+	<% } %>
 </ul>
