--- a/views/user/del-comment.ejs
+++ b/views/user/del-comment.ejs
@@ -1,7 +1,14 @@
 <!-- delete-comment.ejs -->
-<% if(comment.username !== currUser){ %>
-<form action="/comment/<%= comment._id %>/delete" method="POST">
+<% if(comment.username === currUser){ %>
+
+<form class="del-btn-form" action="/comment/<%= comment._id %>/delete" method="POST">
     <!-- <p>Are you sure you want to delete this comment?</p> -->
-    <button type="submit" class="btn btn-danger">Delete</button>
+    <button type="submit" class="del-comment">
+        <span class="material-symbols-outlined">
+            delete
+        </span>
+    </button>
+    
 </form>
+
 <% } %>
