--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,5 +1,5 @@
 <h3>Sign In</h3>
-<form action="/user" method="POST">
+<form action="/login" method="POST">
 	<label for="username">Username</label>
 	<input type="text" placeholder="Enter Username" name="username">
 
