--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="../../public/img/title2.jpg" type="img/jpg">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title><%= locals.title %></title>
+	<title>PenPalette</title>
 	<meta name="description" content="<%= locals.description %>">
 	<link rel="stylesheet" href="/css/s1.css">
 	<script  type="text/javascript" defer src="/js/script.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	
 </head>
 <body>
 	<!-- view of search bar -->
