--- a/views/layouts/user.ejs
+++ b/views/layouts/user.ejs
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="../../public/img/img.png" type="x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title><%= locals.title %></title>
+	<title>PenPalette</title>
 	<meta name="description" content="<%= locals.description %>">
 	<link rel="stylesheet" href="/css/s1.css">
 	<script  type="text/javascript" defer src="/js/script.js"></script>
