--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="../../public/img/title2.jpg" type="img/jpg">
+	<link rel="icon" href="img/blocks.png" type="img/png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>PenPalette</title>
 	<meta name="description" content="<%= locals.description %>">
