--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -17,7 +17,13 @@
 		</li>
 		<% }) %>
 	</ul>
+	<div class="pagi">
 	<% if (nextPage !== null) { %>
     	<a href="/?page=<%= nextPage %>" class="pagination">&lt; View Older Posts</a>
   	<% } %>
+	<br>
+	<% if (prevPage!==null) { %>
+		<a href="/?page=<%= prevPage %>" class="pagination">View Newer Posts &gt;</a>
+  	<% } %>
+	</div>
 </section>
